--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,9 @@ configurations {
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web:1.4.0.RELEASE")
     compile("org.springframework.boot:spring-boot-starter-jetty:1.4.0.RELEASE")
+    compile("org.springframework.data:spring-data-mongodb:1.9.2.RELEASE")
+    compile group: 'org.mongodb', name: 'mongo-java-driver', version: '3.3.0'
+
 
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
