--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,19 @@
 group 'tmp-enrollment'
 version '1.0-SNAPSHOT'
 
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.3.3.RELEASE")
+    }
+}
 apply plugin: 'java'
+apply plugin: 'application'
+apply plugin: 'idea'
+apply plugin: 'war'
+apply plugin: 'spring-boot'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -9,6 +21,8 @@ targetCompatibility = 1.8
 repositories {
     mavenCentral()
 }
+
+mainClassName = "org.tmp.enrollment.launcher.Launcher"
 
 configurations {
     compile.exclude module: "spring-boot-starter-tomcat"
@@ -24,4 +38,6 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
 
-
+bootRepackage {
+    mainClass = 'org.tmp.enrollment.launcher.Launcher'
+}
