--- a/build.gradle
+++ b/build.gradle
@@ -31,10 +31,13 @@ configurations {
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web:1.4.0.RELEASE")
     compile("org.springframework.boot:spring-boot-starter-jetty:1.4.0.RELEASE")
+    compile 'org.springframework.boot:spring-boot-starter-security:1.4.0.RELEASE'
     compile("org.springframework.data:spring-data-mongodb:1.9.2.RELEASE")
     compile group: 'org.mongodb', name: 'mongo-java-driver', version: '3.3.0'
-
-
+    compile 'io.jsonwebtoken:jjwt:0.6.0'
+    compile 'com.fasterxml.jackson.core:jackson-core:2.6.3'
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.6.3'
+    compile 'com.fasterxml.jackson.core:jackson-annotations:2.6.3'
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
 
