Fixed gradle shit

--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,11 @@
 group 'tmp-enrollment'
 version '1.0-SNAPSHOT'
 
+task wrapper(type: Wrapper) {
+    gradleVersion = '2.12'
+}
+
+
 buildscript {
     repositories {
         mavenCentral()
