--- a/build.gradle
+++ b/build.gradle
@@ -59,5 +59,5 @@ dependencies {
 }
 
 bootRepackage {
-    mainClass = 'org.tmp.enrollment.launcher.Launcher'
+    mainClass = 'org.tmp.enrollment.Launcher'
 }
