--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ buildscript {
     }
 }
 apply plugin: 'java'
+apply plugin: 'groovy'
 apply plugin: 'application'
 apply plugin: 'idea'
 apply plugin: 'war'
@@ -38,6 +39,7 @@ dependencies {
     // Spring-related
     compile("org.springframework.boot:spring-boot-starter-web:1.4.0.RELEASE")
     compile("org.springframework.boot:spring-boot-starter-jetty:1.4.0.RELEASE")
+    compile("org.springframework.boot:spring-boot-starter-test:1.4.0.RELEASE")
     compile("org.springframework.data:spring-data-mongodb:1.9.2.RELEASE")
     compile 'org.springframework.boot:spring-boot-starter-security:1.4.0.RELEASE'
 
@@ -56,7 +58,10 @@ dependencies {
 
     // Test
     testCompile group: 'junit', name: 'junit', version: '4.11'
-    testCompile group: 'org.spockframework', name: 'spock-core', version: '1.0-groovy-2.4'
+    testCompile group: 'org.spockframework', name: 'spock-core', version: '1.1-groovy-2.4-rc-3'
+    testCompile 'org.codehaus.groovy:groovy-all:2.4.7'
+    testCompile group: 'org.spockframework', name: 'spock-spring', version: '1.1-groovy-2.4-rc-3'
+
 }
 
 bootRepackage {
