--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,8 @@ dependencies {
 
     compileOnly "org.projectlombok:lombok:1.16.10"
 
+    compile 'com.google.guava:guava:20.0'
+
     // Test
     testCompile group: 'junit', name: 'junit', version: '4.11'
     testCompile group: 'org.spockframework', name: 'spock-core', version: '1.1-groovy-2.4-rc-3'
